--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
-asgiref==3.4.1
+asgiref==3.5.0
+dj-database-url==0.5.0
+dj-email-url==1.0.5
 Django==3.2.9
+django-cache-url==3.3.0
 django-crispy-forms==1.9.2
+environs==8.0.0
+gunicorn==19.9.0
+marshmallow==3.14.1
+psycopg2-binary==2.9.3
 python-dotenv==0.19.2
 pytz==2021.3
 sqlparse==0.4.2
+whitenoise==5.1.0
